# kivy_app

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
docker/app/: Dockerfile
docker/db/: Dockerfile
